ADD_PLATFORM_LIBRARY(AusweisAppQml)

TARGET_LINK_LIBRARIES(AusweisAppQml Qt5::Core Qt5::Svg Qt5::Qml Qt5::Quick Qt5::QuickControls2 AusweisAppCore AusweisAppGlobal AusweisAppRemoteDevice)
IF(DESKTOP)
	TARGET_LINK_LIBRARIES(AusweisAppQml AusweisAppExport)
ENDIF()

IF(TARGET Qt5::Bluetooth)
	TARGET_LINK_LIBRARIES(AusweisAppQml Qt5::Bluetooth)
ENDIF()

TARGET_COMPILE_DEFINITIONS(AusweisAppQml PRIVATE QT_STATICPLUGIN)

STRING(REPLACE "\\" "/" RES_DIR ${RESOURCES_DIR})
IF(CMAKE_GENERATOR STREQUAL Xcode OR CMAKE_VERSION VERSION_LESS "3.8")
	TARGET_COMPILE_DEFINITIONS(AusweisAppQml PRIVATE $<$<CONFIG:Debug>:RES_DIR="\\"${RES_DIR}\\"">)
ELSE()
	SET_PROPERTY(SOURCE "UIPlugInQml.cpp" APPEND PROPERTY COMPILE_FLAGS $<$<CONFIG:Debug>:-DRES_DIR="\\"${RES_DIR}\\"">)
ENDIF()
